refactor: module health and desease of indigenous interview
