# src/shared/infra/http/swagger.json
@@ -1359,37 +1359,6 @@
             "application/json": {
               "schema": {
                 "type": "object",
-                "x-examples": {
-                  "Example 1": {
-                    "entrevista_indigena_id": "string",
-                    "tomou_vacina_covid": "string",
-                    "motivo_nao_tomar_vacina_covid": "string",
-                    "condicao_de_saude": "string",
-                    "tekoha_mudou_condicao_de_saude": "string",
-                    "morador_exposto_veneno_lavoura": "string",
-                    "doencas_contato_veneno_lavoura": "string",
-                    "motivo_doencas_contato_veneno_lavoura": "string",
-                    "acidentes": "string",
-                    "acidentes_ocorridos": "string",
-                    "ocorrencia_de_ameacas": "string",
-                    "ocorrencia_violencia_fisica": "string",
-                    "local_ocorrencia_violencia_fisica": "string",
-                    "lista_tratamentos": "string",
-                    "tratamento_com_paje_ou_similar": "string",
-                    "tratamento_igreja": "string",
-                    "medicacao_uso_continuo": "string",
-                    "doenca_medicacao_uso_continuo": "string",
-                    "primeiro_recurso_ao_notar_doenca": "string",
-                    "morador_internado": "string",
-                    "morador_problemas_bebidas_alcoolicas": "string",
-                    "morador_problemas_uso_drogas": "string",
-                    "familiar_morte_covid": "string",
-                    "familiar_morte_covid_contribuia_renda_familiar": "string",
-                    "familiares_morte_outras_causas": "string",
-                    "motivo_familiares_morte_outras_causas": "string",
-                    "familiares_morte_outras_causas_contribuia_renda_familiar": "string"
-                  }
-                },
                 "properties": {
                   "entrevista_indigena_id": {
                     "type": "string"
@@ -1398,6 +1367,12 @@
                     "type": "string"
                   },
                   "motivo_nao_tomar_vacina_covid": {
+                    "type": "string"
+                  },
+                  "familiar_morte_covid": {
+                    "type": "string"
+                  },
+                  "familiar_morte_covid_contribuia_renda_familiar": {
                     "type": "string"
                   },
                   "condicao_de_saude": {
@@ -1454,40 +1429,42 @@
                   "morador_problemas_bebidas_alcoolicas": {
                     "type": "string"
                   },
+                  "fuma_cigarro": {
+                    "type": "string"
+                  },
                   "morador_problemas_uso_drogas": {
-                    "type": "string"
-                  },
-                  "familiar_morte_covid": {
-                    "type": "string"
-                  },
-                  "familiar_morte_covid_contribuia_renda_familiar": {
-                    "type": "string"
-                  },
-                  "familiares_morte_outras_causas": {
-                    "type": "string"
-                  },
-                  "motivo_familiares_morte_outras_causas": {
-                    "type": "string"
-                  },
-                  "familiares_morte_outras_causas_contribuia_renda_familiar": {
                     "type": "string"
                   }
                 },
-                "required": [
-                  "entrevista_indigena_id",
-                  "tomou_vacina_covid",
-                  "morador_exposto_veneno_lavoura",
-                  "acidentes",
-                  "ocorrencia_de_ameacas",
-                  "ocorrencia_violencia_fisica",
-                  "tratamento_com_paje_ou_similar",
-                  "tratamento_igreja",
-                  "medicacao_uso_continuo",
-                  "primeiro_recurso_ao_notar_doenca",
-                  "morador_internado",
-                  "morador_problemas_bebidas_alcoolicas",
-                  "morador_problemas_uso_drogas"
-                ]
+                "x-examples": {
+                  "Example 1": {
+                    "entrevista_indigena_id": "string",
+                    "tomou_vacina_covid": "string",
+                    "motivo_nao_tomar_vacina_covid": "string",
+                    "familiar_morte_covid": "string",
+                    "familiar_morte_covid_contribuia_renda_familiar": "string",
+                    "condicao_de_saude": "string",
+                    "tekoha_mudou_condicao_de_saude": "string",
+                    "morador_exposto_veneno_lavoura": "string",
+                    "doencas_contato_veneno_lavoura": "string",
+                    "motivo_doencas_contato_veneno_lavoura": "string",
+                    "acidentes": "string",
+                    "acidentes_ocorridos": "string",
+                    "ocorrencia_de_ameacas": "string",
+                    "ocorrencia_violencia_fisica": "string",
+                    "local_ocorrencia_violencia_fisica": "string",
+                    "lista_tratamentos": "string",
+                    "tratamento_com_paje_ou_similar": "string",
+                    "tratamento_igreja": "string",
+                    "medicacao_uso_continuo": "string",
+                    "doenca_medicacao_uso_continuo": "string",
+                    "primeiro_recurso_ao_notar_doenca": "string",
+                    "morador_internado": "string",
+                    "morador_problemas_bebidas_alcoolicas": "string",
+                    "fuma_cigarro": "string",
+                    "morador_problemas_uso_drogas": "string"
+                  }
+                }
               }
             }
           }
